# 04-oop-13-16-skypro-poetry

./: 13-0-6.py  13-0-7.py  13-0-8.py  13-0-9.py  13-1-12.py  13-1-3.py  13-1-4.py  13-1-5.py  13-2-2.py  14-1-12.py  14-1-2.py  14-1-3.py  14-1-4.py  14-1-5.py  14-1-6.py  15-1-2.py  15-1-3.py  15-2-2.py  15-2-3.py  15-2-4.py  16-1-2.py  16-1-3.py  16-1-4.py  README.md  currency_rates.json  main.py  pyproject.toml
Practica/: 14-2-1.py  16-2-1.py  readme.md
sut-12-08/: magic_metod_new.py  radd.py
