[tool.poetry]
name = "13-0-skypro-poetry"
version = "0.1.0"
description = ""
authors = ["Victor Sadykov <svn1409@gmail.com>"]
readme = "README.md"
packages = [{include = "13_0_skypro_poetry"}]

[tool.poetry.dependencies]
python = "^3.11"
requests = "^2.31.0"
pytest = "^7.4.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
